# movie_management

./: Makefile  README.md  docker-compose.yaml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env  .gitignore  Cargo.toml  Dockerfile  README.md
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_accounts.rs
backend/src/: controller.rs  db_connector.rs  form.rs  main.rs  setting.rs
backend/src/constants/: regex.rs
backend/src/controller/: account_manage.rs  health_check.rs  movie_manage.rs  orm.rs
backend/src/controller/orm/: account_manage.rs
backend/src/controller/validation/: account_manage.rs
backend/src/form/: account_manage.rs  commom_error.rs  common_error.rs  health_check.rs  movie_create.rs  movie_registration.rs
backend/src/model/: account.rs
backend/src/swagger/: swagger.rs
frontend/: Dockerfile  FE-README.md  docker-compose.yaml  package.json
frontend/projects/: next.config.js  package-lock.json  package.json
frontend/projects/src/app/: header.tsx  layout.tsx
frontend/projects/src/app/api/: post.tsx
frontend/projects/src/app/components/Header/: index.tsx  style.module.css
frontend/projects/src/app/create/: Register.module.css  page.tsx  style.module.css
frontend/projects/src/app/css/: register.module.css
frontend/projects/src/app/login/: page.tsx  style.module.css
frontend/projects/src/app/movielist/: page.tsx
frontend/projects/src/app/register/: page.tsx
frontend/projects/src/app/schema/: login.tsx
frontend/src/: package-lock.json
tasks/: task.md
(+10 files in other folders)
