[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sea-orm = { version = "0.12.14",features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ]}
dotenv = "0.15.0"
lazy_static = "1.4.0"
once_cell = "1.8.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }